@@ -9,7 +9,6 @@ HQ
 --
 - tabulku aktualniho poradi aktualizovat klikanim do grafu
 - auto refresh logu udalosti
-- v logu udalosti udelat klikaci odkazy na HINT, SOLUTION, ...
 - v grafu zvyraznit startovni/cilovou/vzdavaci indicii
 
 HQ - prehledova tabulka
